[project]
name = "dl-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CiCi", email = "96775840+weecici@users.noreply.github.com." },
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
